[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../ulib/axstd", optional = true }
log = "0.4.0"
arceos_api = { path = "../../api/arceos_api" }
axconfig = { path = "../../modules/axconfig" }
elf = { version = "0.7.4", default-features = false }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
