[package]
name = "raspi4-gpio"
version = "0.1.0"
edition = "2021"
authors = ["Yilong Liu <18922251299@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../../ulib/axstd", optional = true }

arm_pl011 = { version = "0.1.0", path = "../../../crates/arm_pl011" }
