[package]
name = "raspi4-net"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { path = "../../../ulib/axstd", features = ["net", "driver-bcm54213pe"]}
log = "0.4.0"
bcm2711-hal = { path = "../../../crates/bcm2711-hal" }
arr_macro = "0.2.1"
arm_gpio = { version = "0.1.0", path = "../../../crates/arm_gpio/" }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
